welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: not found: value gris
    var couleur:Boolean = gris
                          ^